--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSJ - Servicios Eléctricos Profesionales</title>
-    <meta name="description" content="JSJ - Especialistas en instalaciones eléctricas residenciales, comerciales e industriales. Más de 25 años de experiencia en Colombia.">
+    <meta name="description" content="JSJ Electric Home-  en instalaciones eléctricas residenciales, comerciales e industriales. Más de 25 años de experiencia en Colombia.">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/feather-icons@4.29.0/dist/feather.min.js"></script>
 </head>
